--- a/src/Components/DishCard_Item/DishCard_Item.module.scss
+++ b/src/Components/DishCard_Item/DishCard_Item.module.scss
@@ -5,14 +5,14 @@
   position: relative;
   width: rem(310);
   height: rem(450);
-  padding-bottom: 20px;
+  padding-bottom: rem(20);
   background-color: $color_light_whiteHeader;
-  border-radius: 10px;
+  border-radius: rem(10);
   box-shadow: $boxshadow_big;
 
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: rem(10);
 
   overflow: hidden;
 
@@ -24,36 +24,6 @@
     flex-direction: column;
     align-items: center;
     flex: 1 0 auto;
-    gap: 10px;
-  }
-}
-
-.discount {
-  width: 70%;
-  height: rem(60);
-
-  position: absolute;
-  padding: 5px 0;
-  top: 0;
-  right: -25%;
-  z-index: 1;
-
-  background-color: darken($color_darken_red, 10);
-  font-size: rem(26);
-
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  box-shadow: $boxshadow_big;
-
-  transform: rotate(45deg);
-
-  span {
-    font-size: rem(14);
-    font-style: italic;
-    color: wheat;
-  }
-  strong {
-    color: wheat;
+    gap: rem(10);
   }
 }
