--- a/src/Components/Cart/Cart.module.scss
+++ b/src/Components/Cart/Cart.module.scss
@@ -21,24 +21,25 @@
 
   min-width: rem(40);
 
-  transform: translatex(-15px);
+  transform: translatex(rem(-15));
 }
-.none {
-  display: none;
-}
+
 .nav_cart_count {
   background-color: $color_darken_brown;
   width: 100%;
   color: wheat;
-  padding-left: 20px;
-  padding-right: 20px;
-  border-radius: 0 0 10px;
+  padding: 0 rem(20);
+
+  border-radius: 0 0 rem(10);
 }
 .nav_cart_cost {
   border: 1px solid $color_darken_brown;
   width: 100%;
-  padding-left: 20px;
-  padding-right: 10px;
+  padding: 0 rem(20);
 
-  border-radius: 0 10px 0;
+  border-radius: 0 rem(10) 0;
+}
+
+.none {
+  display: none;
 }
