--- a/src/Components/Count/Count.module.scss
+++ b/src/Components/Count/Count.module.scss
@@ -4,16 +4,16 @@
 .count {
   position: absolute;
   bottom: 0;
-  right: 15px;
+  right: rem(15);
   animation: cart-slide 0.3s ease-in;
 
   span {
     position: absolute;
-    right: -10px;
-    top: -5px;
+    right: rem(-10);
+    top: rem(-5);
     background-color: lighten($color_darken_brown, 30);
-    border-radius: 5px;
-    min-width: 20px;
+    border-radius: rem(5);
+    min-width: rem(20);
     text-align: center;
     font-weight: 500;
   }
@@ -21,7 +21,7 @@
   @keyframes cart-slide {
     0% {
       opacity: 0;
-      transform: translatex(-30px);
+      transform: translatex(rem(-30));
     }
     100% {
       opacity: 1;
