--- a/src/Components/CustomForm/CustomForm.module.scss
+++ b/src/Components/CustomForm/CustomForm.module.scss
@@ -11,7 +11,7 @@
 
   flex: 1 0 auto;
   margin: 0 auto;
-  padding: 20px 0;
+  padding: rem(20) 0;
 
   h1 {
     font-size: rem(24);
@@ -21,20 +21,20 @@
     text-shadow: $boxshadow_big;
   }
   h3 {
-    margin: rem(10) 0px;
+    margin: rem(10) 0;
   }
 
   button {
     min-width: 100%;
-    margin: 20px 0;
+    margin: rem(20) 0;
   }
 }
 .hint {
-  font-size: 14px;
+  font-size: rem(14);
   font-weight: 600;
   a {
     color: $color_darken_red;
-    font-size: 16px;
+    font-size: rem(16);
     font-weight: 600;
     text-shadow: $boxshadow_big;
   }
