--- a/src/Components/CustomSelect/CustomSelect.module.scss
+++ b/src/Components/CustomSelect/CustomSelect.module.scss
@@ -2,38 +2,38 @@
 @import "../../Style/variables.scss";
 
 .select_wrapper_big {
-  width: 320px;
+  width: rem(320);
   margin: 0 auto;
   position: relative;
 }
 
 .select_wrapper_small {
-  width: 120px;
+  width: rem(120);
   margin: 0 auto;
   position: relative;
 }
 .select_options {
   min-width: 100%;
   position: absolute;
-  border-radius: 10px;
-  padding: 10px 5px;
-  margin-top: 5px;
+  border-radius: rem(10);
+  padding: rem(10) rem(5);
+  margin-top: rem(5);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 5px;
+  gap: rem(5);
   background: radial-gradient($color_light_orange, $color_EX_darken_orange);
   box-shadow: $boxshadow_big;
   z-index: 10;
 }
 .select_option {
-  padding: 0px 5px;
+  padding: 0 rem(5);
   border: 1px solid $color_darken_brown;
-  border-radius: 20px;
-  min-width: 40px;
-  height: 40px;
-  line-height: 40px;
+  border-radius: rem(20);
+  min-width: rem(40);
+  height: rem(40);
+  line-height: rem(40);
   font-size: rem(14);
   text-align: center;
   font-weight: bold;
@@ -48,12 +48,12 @@
   }
 }
 .select_option_active {
-  padding: 0px 5px;
+  padding: 0 rem(5);
   border: 1px solid $color_darken_brown;
-  border-radius: 20px;
-  min-width: 40px;
-  height: 40px;
-  line-height: 40px;
+  border-radius: rem(20);
+  min-width: rem(40);
+  height: rem(40);
+  line-height: rem(40);
   font-size: rem(14);
   text-align: center;
   font-weight: bold;
