--- a/src/Components/Discount/Discount.module.scss
+++ b/src/Components/Discount/Discount.module.scss
@@ -3,12 +3,12 @@
 
 .discount {
   width: 100%;
-  height: 50px;
+  height: rem(50);
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
-  margin: 10px 0;
+  gap: rem(20);
+  margin: rem(10) 0;
   background-color: lighten($color_light_red, 10);
   span {
     color: $color_darken_red;
@@ -23,19 +23,19 @@
 
 .small {
   position: absolute;
-  width: 300px;
-  height: 70px;
+  width: rem(300);
+  height: rem(70);
 
   top: -4%;
   right: -35%;
-  padding-bottom: 10px;
-  padding-left: 15px;
+  padding-bottom: rem(10);
+  padding-left: rem(15);
 
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5px;
-  margin: 20px 0;
+  gap: rem(5);
+  margin: rem(20) 0;
   background-color: rgba($color: $color_light_red, $alpha: 0.9);
   transform: rotate(45deg);
 
