--- a/src/Components/DishCards_Catalog/DishCardsCatalog.module.scss
+++ b/src/Components/DishCards_Catalog/DishCardsCatalog.module.scss
@@ -2,33 +2,33 @@
 @import "../../Style/mixins.scss";
 
 .dishCards {
-  margin-top: 20px;
+  margin-top: rem(20);
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .dishCards_container {
-  padding: 0 30px;
+  padding: 0 rem(30);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(1, 1fr);
-  grid-column-gap: 30px;
-  grid-row-gap: 30px;
+  grid-column-gap: rem(30);
+  grid-row-gap: rem(30);
 
-  margin-bottom: 10px;
+  margin-bottom: rem(10) x;
 
-  @media only screen and (max-width: 1350px) {
+  @media only screen and (max-width: rem(1350)) {
     grid-template-columns: repeat(3, 1fr);
-    padding: 0 20px;
+    padding: 0 rem(20);
     grid-column-gap: auto;
     grid-row-gap: auto;
   }
 
-  @media only screen and (max-width: 1150px) {
+  @media only screen and (max-width: rem(1150)) {
     grid-template-columns: repeat(2, 1fr);
   }
-  @media only screen and (max-width: 680px) {
+  @media only screen and (max-width: rem(680)) {
     grid-template-columns: repeat(1, 1fr);
   }
 }
