--- a/src/Components/EmptyCart/EmptyCart.module.scss
+++ b/src/Components/EmptyCart/EmptyCart.module.scss
@@ -7,14 +7,14 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 20px;
+  gap: rem(20);
   flex: 1 0 auto;
   p,
   h2 {
-    padding: 0 20px;
+    padding: 0 rem(20);
   }
   img {
-    transform: translate(10px, 10px);
+    transform: translate(rem(10), rem(10));
     width: 80%;
     height: 80%;
   }
@@ -26,9 +26,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px 0;
+    margin: rem(20) 0;
   }
-  @media only screen and (max-width: 650px) {
+  @media only screen and (max-width: rem(650)) {
     h2 {
       font-size: rem(24);
     }
