--- a/src/Components/Error/Error.module.scss
+++ b/src/Components/Error/Error.module.scss
@@ -2,13 +2,13 @@
 @import "../../Style/mixins.scss";
 
 .error {
-  min-height: 30px;
-  padding: 0px 10px;
+  min-height: rem(30);
+  padding: 0 rem(10);
 
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: rem(10);
 
   font-size: rem(14);
   font-weight: 500;
