--- a/src/Components/Favourites_Item/FavouritesItem.module.scss
+++ b/src/Components/Favourites_Item/FavouritesItem.module.scss
@@ -3,31 +3,31 @@
 
 .favourites_item {
   position: relative;
-  width: 300px;
-  min-height: 300px;
+  width: rem(300);
+  min-height: rem(300);
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  gap: rem(10);
 
   background-color: $color_light_orange;
 
-  border-radius: 20px;
+  border-radius: rem(20);
   box-shadow: $boxshadow_big;
-  padding-bottom: 20px;
-  margin-top: 30px;
+  padding-bottom: rem(20);
+  margin-top: rem(30);
   .description {
     width: 100%;
-    padding-left: 20px;
+    padding-left: rem(20);
 
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: rem(10);
   }
 
   & div:nth-child(1) {
-    height: 200px;
-    width: 200px;
+    height: rem(200);
+    width: rem(200);
     border-radius: 50%;
     position: relative;
     left: -25%;
@@ -42,23 +42,23 @@
     }
   }
 
-  .controllers {
+  .favourites_buttons {
     min-width: 50%;
     min-height: 50%;
     display: flex;
     flex-direction: column;
 
     position: absolute;
-    top: -30px;
+    top: rem(-30);
     right: 0;
     & div:nth-child(1) {
       opacity: 0;
       border: 1px solid $color_darken_red;
       background-color: $color_light_red;
-      margin-top: 20px;
+      margin-top: rem(20);
 
-      width: 50px;
-      height: 50px;
+      width: rem(50);
+      height: rem(50);
       fill: $color_darken_red;
       svg {
         animation: favourite-pulse 1s ease-in-out infinite;
@@ -66,18 +66,18 @@
     }
     & button:nth-child(2) {
       opacity: 0;
-      margin-top: 20px;
+      margin-top: rem(20);
 
-      width: 70px;
-      height: 70px;
+      width: rem(70);
+      height: rem(70);
       border-radius: 50%;
     }
     & button:nth-child(3) {
       opacity: 0;
-      margin-top: 20px;
+      margin-top: rem(20);
 
-      width: 35px;
-      height: 35px;
+      width: rem(35);
+      height: rem(35);
       border-radius: 50%;
     }
   }
@@ -85,23 +85,23 @@
     transform: scale(1.1);
     z-index: 10;
 
-    .controllers {
+    .favourites_buttons {
       min-width: 50%;
       min-height: 50%;
       display: flex;
       flex-direction: column;
 
       position: absolute;
-      top: -30px;
+      top: rem(-30);
       right: 0;
       & div:nth-child(1) {
         opacity: 1;
         border: 1px solid $color_darken_red;
         background-color: $color_light_red;
-        margin-top: 20px;
-        margin-left: 60px;
-        width: 50px;
-        height: 50px;
+        margin-top: rem(20);
+        margin-left: rem(60);
+        width: rem(50);
+        height: rem(50);
         fill: $color_darken_red;
         svg {
           animation: favourite-pulse 1s ease-in-out infinite;
@@ -109,18 +109,18 @@
       }
       & button:nth-child(2) {
         opacity: 1;
-        margin-top: 20px;
-        margin-left: 50px;
-        width: 70px;
-        height: 70px;
+        margin-top: rem(20);
+        margin-left: rem(50);
+        width: rem(70);
+        height: rem(70);
         border-radius: 50%;
       }
       & button:nth-child(3) {
         opacity: 1;
-        margin-top: 20px;
-        margin-left: 15px;
-        width: 35px;
-        height: 35px;
+        margin-top: rem(20);
+        margin-left: rem(15);
+        width: rem(35);
+        height: rem(35);
         border-radius: 50%;
       }
     }
@@ -134,15 +134,15 @@
   position: absolute;
   width: 40%;
   right: 0;
-  top: 80px;
+  top: rem(80);
   &_icon {
     position: absolute;
-    top: -60px;
+    top: rem(-60);
     right: 0;
 
     & div:nth-child(1) {
-      height: 50px;
-      width: 50px;
+      height: rem(50);
+      width: rem(50);
       box-shadow: none;
       fill: $color_darken_red;
       opacity: 0.3;
@@ -156,7 +156,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    padding-right: 20px;
+    padding-right: rem(20);
   }
   li {
     line-height: rem(20);
