--- a/src/Components/Navbar_Item/NavbarItem.module.scss
+++ b/src/Components/Navbar_Item/NavbarItem.module.scss
@@ -4,12 +4,13 @@
 .wrapper {
   display: flex;
   flex: 1 0 auto;
-  column-gap: 20px;
-  margin-left: 10px;
+  column-gap: rem(20);
+  margin-left: rem(10);
 }
 
 .item {
   @include nav_itemCreator(60, 100, $color_darken_orange, 40);
+
   &_active {
     @include nav_itemCreator(60, 100, $color_darken_orange, 40);
     background-color: $color_darken_orange;
@@ -20,7 +21,7 @@
     }
   }
 }
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: rem(950)) {
   .item {
     font-size: rem(14);
   }
