--- a/src/Components/NotFound/NotFound.module.scss
+++ b/src/Components/NotFound/NotFound.module.scss
@@ -24,7 +24,7 @@
   }
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: rem(550)) {
   h2 {
     font-size: rem(24);
   }
