--- a/src/Components/NotificationToast/NotificationToast.module.scss
+++ b/src/Components/NotificationToast/NotificationToast.module.scss
@@ -3,38 +3,38 @@
 
 .toast_container {
   position: fixed;
-  right: -250px;
+  right: rem(-250);
   top: 30%;
-  width: 250px;
-  min-height: 40px;
-  padding: 5px;
+  width: rem(250);
+  min-height: rem(40);
+  padding: rem(5);
   z-index: 20;
 
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: rem(10);
 }
 
 .toast {
-  right: -250px;
+  right: rem(-250);
   top: 20%;
-  width: 250px;
-  height: 40px;
-  padding-left: 20px;
+  width: rem(250);
+  height: rem(40);
+  padding-left: rem(20);
   z-index: 20;
 
   color: $color_darken_green;
   font-weight: bold;
 
-  border-left: 10px solid $color_darken_green;
-  border-radius: 5px 20px 20px 5px;
+  border-left: rem(10) solid $color_darken_green;
+  border-radius: rem(5) rem(20) rem(20) rem(5);
   background-color: rgba($color: $color_light_green, $alpha: 0.8);
 
   animation: toast-fadein 2s ease;
 
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: rem(10);
   svg {
     fill: $color_darken_green;
     animation: toast-svg 1s ease-in-out;
@@ -45,10 +45,10 @@
       transform: translateX(0px);
     }
     30% {
-      transform: translateX(-280px);
+      transform: translateX(rem(-280));
     }
     80% {
-      transform: translateX(-280px);
+      transform: translateX(rem(-280));
     }
     100% {
       transform: translateX(0px);
