--- a/src/Components/PaymentType/PaymenType.module.scss
+++ b/src/Components/PaymentType/PaymenType.module.scss
@@ -3,17 +3,20 @@
 
 .payment_section {
   position: relative;
+
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: rem(10);
+
   min-width: 100%;
-  min-height: 50px;
-  padding: 5px 20px;
-  line-height: 40px;
+  min-height: rem(50);
+  line-height: rem(40);
+  padding: rem(5) rem(20);
 
   background-color: $color_light_orange;
   box-shadow: $boxshadow_big;
-  border-radius: 20px;
+  border-radius: rem(20);
+
   h4 {
     font-size: rem(14);
     min-width: 15%;
@@ -25,16 +28,16 @@
   display: flex;
   flex-wrap: wrap;
   flex: 1 0 auto;
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: rem(20);
+  margin-bottom: rem(20);
 }
 .credit_card {
-  max-width: 320px;
+  max-width: rem(320);
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
-  margin: 10px auto;
+  gap: rem(10);
+  margin: rem(10) auto;
 
   input::-webkit-outer-spin-button,
   input::-webkit-inner-spin-button {
@@ -44,33 +47,33 @@
 }
 .card_valid {
   display: flex;
-  gap: 5px;
+  gap: rem(5);
 }
 
 .slider {
   margin: 0 auto;
   width: 100%;
-  padding: 3px;
-  height: 20px;
+  padding: rem(3);
+  height: rem(20);
   background-color: $color_darken_brown;
-  border-radius: 10px;
+  border-radius: rem(10);
   box-shadow: $boxshadow_big;
 }
 .slider_bar {
-  border-radius: 10px;
+  border-radius: rem(10);
   background: $color_gradient;
   height: 90%;
 }
 .processing {
   position: absolute;
-  top: 5px;
-  right: 20px;
+  top: rem(5);
+  right: rem(20);
   color: $color_darken_red;
   font-weight: bold;
   font-size: rem(14);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: rem(400)) {
   .credit_card {
     width: 100%;
   }
