--- a/src/Components/RateProduct/RateProduct.module.scss
+++ b/src/Components/RateProduct/RateProduct.module.scss
@@ -9,9 +9,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: rem(20);
   flex: 1 0 auto;
 }
+
 .rate_content {
   flex: 1 0 auto;
   width: 80%;
@@ -19,7 +20,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: rem(20);
   img {
     width: rem(50);
     height: rem(50);
@@ -34,7 +35,7 @@
   }
   input {
     background-color: transparent;
-    padding: 0 20px;
+    padding: 0 rem(20);
     height: rem(40);
     width: 100%;
   }
@@ -42,7 +43,7 @@
     height: rem(40);
     width: 80%;
     background-color: $color_light_orange;
-    border-radius: 20px;
+    border-radius: rem(20);
   }
 }
 .rating {
@@ -51,7 +52,7 @@
   justify-content: flex-start;
   flex-direction: row-reverse;
   align-items: center;
-  gap: 10px;
+  gap: rem(10);
   z-index: 1;
 
   svg {
@@ -68,7 +69,7 @@
   flex-direction: row-reverse;
   justify-content: flex-start;
   align-items: center;
-  gap: 10px;
+  gap: rem(10);
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -102,5 +103,5 @@
 
 .rate_btn {
   position: absolute;
-  right: 20px;
+  right: rem(20);
 }
