--- a/src/Components/Rating/Rating.module.scss
+++ b/src/Components/Rating/Rating.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  gap: 5px;
+  gap: rem(5);
   z-index: 1;
   width: rem(100);
 
@@ -22,11 +22,14 @@
 }
 .small {
   position: relative;
+  height: rem(15);
+
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
-  height: 15px;
-  gap: 5px;
+
+  gap: rem(5);
+
   svg {
     height: rem(10);
     width: rem(10);
@@ -39,12 +42,15 @@
 }
 .cover {
   position: absolute;
+
+  width: 100%;
+  height: 100%;
+
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  gap: 5px;
-  width: 100%;
-  height: 100%;
+  gap: rem(5);
+
   z-index: -1;
 
   svg {
