--- a/src/Components/RecentOrders/RecentOrders.module.scss
+++ b/src/Components/RecentOrders/RecentOrders.module.scss
@@ -3,21 +3,23 @@
 
 .recent_orders {
   h3 {
-    margin: 20px 0;
+    margin: rem(20) 0;
     text-align: center;
   }
   table {
-    margin: 0px auto 10px;
-    text-align: left;
     width: 98%;
-    background-color: $color_light_orange;
-    border-radius: 20px;
-    border-spacing: 3px;
 
-    padding: 10px 20px;
+    margin: 0 auto rem(10);
+    padding: rem(10) rem(20);
+
+    text-align: left;
+
+    background-color: $color_light_orange;
+    border-radius: rem(20);
+    border-spacing: rem(3);
   }
   thead {
-    height: 30px;
+    height: rem(30);
   }
   tbody {
     font-style: italic;
@@ -38,7 +40,7 @@
     font-weight: bold;
   }
 
-  @media only screen and (max-width: 750px) {
+  @media only screen and (max-width: rem(750)) {
     thead {
       th:nth-child(3) {
         display: none;
@@ -59,18 +61,21 @@
 }
 
 .check_list {
-  background-color: $color_light_orange;
   width: 80%;
 
-  padding: 5px 10px;
-  border-radius: 10px;
-  margin: 10px 0;
+  padding: rem(5) rem(10);
+  margin: rem(10) 0;
+
+  background-color: $color_light_orange;
+  border-radius: rem(10);
   font-style: italic;
 
   li {
-    min-height: 20px;
-    line-height: 20px;
+    min-height: rem(20);
+    line-height: rem(20);
+
     font-size: rem(14);
+
     border-bottom: 1px dashed $color_darken_red;
 
     small {
@@ -81,7 +86,7 @@
   }
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: rem(550)) {
   .recent_orders {
     h3 {
       font-size: rem(16);
