--- a/src/Components/Search/Search.module.scss
+++ b/src/Components/Search/Search.module.scss
@@ -3,19 +3,21 @@
 
 .search {
   position: relative;
+
+  height: rem(50);
+  margin: rem(5);
+
   display: flex;
   align-items: center;
   justify-content: center;
 
-  margin: 5px;
-  height: 50px;
-
   .input {
-    height: 40px;
-    width: 200px;
-    padding: 0 40px;
-    transform: translatex(-20px);
-    border-radius: 15px;
+    height: rem(40);
+    width: rem(200);
+    padding: 0 rem(40);
+
+    transform: translatex(rem(-20));
+    border-radius: rem(15);
     background-color: $color_light_orange;
     border: 1px solid $color_darken_brown;
     color: $color_darken_brown;
