--- a/src/Components/Settings/Settings.module.scss
+++ b/src/Components/Settings/Settings.module.scss
@@ -1,13 +1,13 @@
-@import "../Style/mixins.scss";
-@import "../Style/variables.scss";
-
+@import "../../Style/mixins.scss";
+@import "../../Style/variables.scss";
 .settings_container {
+  width: 60%;
+  margin: 0 auto;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
-  margin: 0 auto;
-  width: 60%;
+  gap: rem(20);
 }
 
 .settings_content {
@@ -15,11 +15,13 @@
 
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: rem(10);
 
   .settings_content_item {
-    @include line-item;
     width: 45%;
+
+    @include line-item;
+
     b {
       position: absolute;
       right: 10%;
@@ -41,12 +43,12 @@ address {
 
 .settings_buttons {
   display: flex;
-  gap: 20px;
+  gap: rem(20);
   button {
-    width: 150px;
+    width: rem(150);
   }
 }
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: rem(950)) {
   .settings_container {
     width: 100%;
   }
@@ -61,7 +63,7 @@ address {
 
   address {
     width: 95%;
-    min-height: 100px;
+    min-height: rem(100);
     display: flex;
     flex-direction: column;
   }
