--- a/src/Components/Slider/Slider.module.scss
+++ b/src/Components/Slider/Slider.module.scss
@@ -4,88 +4,106 @@
 .slider_container {
   position: relative;
 
-  display: flex;
   width: 100%;
   height: 40vh;
+
+  display: flex;
 
   overflow: hidden;
 }
 .slider_item {
-  display: flex;
-  gap: 20px;
+  position: relative;
+
   min-width: 100%;
   height: 100%;
-  position: relative;
+
+  display: flex;
+  gap: 20px;
+
   transition: transform ease-out 0.8s;
 
   img {
     min-width: 100%;
     height: 100%;
-    border-radius: 10px;
+
+    border-radius: rem(10);
     object-fit: cover;
     object-position: 50% 60%;
   }
 }
 
 .switch {
+  width: 100%;
+  height: rem(30);
+
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5px;
+  gap: rem(5);
 
-  width: 100%;
-  height: 30px;
-  border-radius: 20px;
+  border-radius: rem(20);
 }
 .switch_item {
-  height: 10px;
-  width: 10px;
+  height: rem(10);
+  width: rem(10);
+
   border-radius: 50%;
   background-color: $color_light_orange;
   border: 1px solid $color_darken_brown;
   cursor: pointer;
+
   &_active {
-    transform: scale(1.3);
-    height: 10px;
-    width: 10px;
+    height: rem(10);
+    width: rem(10);
+
     border-radius: 50%;
     background-color: $color_darken_brown;
     box-shadow: $boxshadow_big;
+
+    transform: scale(1.3);
   }
 }
 
 .prev {
+  margin-right: rem(20);
+
   background-color: transparent;
-  margin-right: 20px;
+
   transform: rotate(180deg);
   z-index: 10;
+
   svg {
-    height: 20px;
+    height: rem(20);
     fill: $color_darken_brown;
   }
   &_disabled {
+    margin-right: rem(20);
+
     background-color: transparent;
     opacity: 0.5;
-    margin-right: 20px;
+
     transform: rotate(180deg);
     z-index: 10;
     svg {
-      cursor: default;
-      height: 20px;
+      height: rem(20);
+
       fill: grey;
+      cursor: default;
     }
   }
 }
 .next {
+  margin-left: rem(20);
+
   background-color: transparent;
-  margin-left: 20px;
+
   svg {
-    height: 20px;
+    height: rem(20);
     fill: $color_darken_brown;
   }
 }
 
-@media only screen and (max-width: 980px) {
+@media only screen and (max-width: rem(980)) {
   .slider_container {
     width: 95vw;
     height: 60vw;
