--- a/src/Style/mixins.scss
+++ b/src/Style/mixins.scss
@@ -1,11 +1,20 @@
 @use "sass:math";
 @import "./variables.scss";
 
+// ==== functions HERE ====
+
+@function rem($px) {
+  $result: math.div($px, 16) + rem;
+  @return $result;
+}
+
+// ==== MIXINS HERE ====
+
 @mixin nav_itemCreator($height, $width, $color, $svg) {
   height: rem($height);
   min-width: rem($width);
   max-width: rem($width * 2);
-  margin-bottom: 10px;
+  margin-bottom: rem(10);
 
   font-size: rem(16);
   line-height: rem($height);
@@ -26,13 +35,13 @@
 
   svg {
     opacity: 0.5;
-    margin: 10px;
+    margin: rem(10);
     fill: $color_darken_brown;
     height: rem($svg);
     width: rem($svg);
   }
   span {
-    margin-right: 10px;
+    margin-right: rem(10);
   }
 
   &:hover {
@@ -45,7 +54,7 @@
       fill: $color_darken_brown;
     }
   }
-  @media only screen and (max-width: 750px) {
+  @media only screen and (max-width: rem(750)) {
     & span {
       display: none;
     }
@@ -75,7 +84,7 @@
 @mixin buttonCreator($height, $width, $color) {
   height: rem($height);
   min-width: rem($width);
-  padding: 5px;
+  padding: rem(5);
   fill: $color;
   font-size: rem($height / 3.5);
   font-weight: 700;
@@ -150,11 +159,6 @@
   }
 }
 
-@function rem($px) {
-  $result: math.div($px, 16) + rem;
-  @return $result;
-}
-
 @mixin modal {
   position: fixed;
   background-color: $color_modal;
@@ -166,12 +170,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: rem(10);
 }
 
 @mixin modal-content {
   position: relative;
-  padding: 20px;
+  padding: rem(20);
   width: 50%;
   height: 80%;
 
@@ -181,47 +185,49 @@
   justify-content: center;
 
   box-shadow: $boxshadow_big;
-  border-radius: 20px;
+  border-radius: rem(20);
   background: radial-gradient($color_light_orange, $color_EX_darken_orange);
 }
 
 @mixin informer($content) {
-  &:hover {
-    &::after {
-      content: $content;
-      position: absolute;
-      bottom: -35px;
-      text-transform: uppercase;
-      font-style: italic;
-      font-size: 10px;
-      font-weight: bold;
+  @media only screen and (min-width: rem(700)) {
+    &:hover {
+      &::after {
+        content: $content;
+        position: absolute;
+        bottom: rem(-35);
+        text-transform: uppercase;
+        font-style: italic;
+        font-size: rem(10);
+        font-weight: bold;
 
-      background-color: $color_light_orange;
-      width: 100%;
-      text-align: center;
-      line-height: 1.5rem;
-      border-radius: 20px;
-      border: 1px solid $color_darken_brown;
-      z-index: 10;
+        background-color: $color_light_orange;
+        width: 100%;
+        text-align: center;
+        line-height: 1.5rem;
+        border-radius: rem(20);
+        border: 1px solid $color_darken_brown;
+        z-index: 10;
+      }
     }
   }
 }
 
 @mixin line-item {
   position: relative;
-  min-height: 50px;
-  padding: 5px 20px;
-  line-height: 40px;
+  min-height: rem(50);
+  padding: rem(5) rem(20);
+  line-height: rem(40);
   flex: 1 0 auto;
 
   background-color: $color_light_orange;
   box-shadow: $boxshadow_big;
-  border-radius: 20px;
+  border-radius: rem(20);
 
   font-size: rem(14);
   font-weight: bold;
   span {
-    margin-left: 10px;
+    margin-left: rem(10);
     font-size: rem(16);
     font-weight: 400;
     font-style: italic;
