--- a/src/layouts/Layouts.module.scss
+++ b/src/layouts/Layouts.module.scss
@@ -136,29 +136,21 @@
       width: rem(50);
       height: rem(50);
 
-      animation: img-animation 5s linear infinite alternate;
+      animation: img-animation 4s ease-in-out infinite alternate;
 
       @keyframes img-animation {
         0% {
           transform: scale(1);
         }
         10% {
-          transform: scale(1.5);
+          transform: scale(1.3);
         }
-        25% {
+        15% {
           transform: scale(1);
         }
-        50% {
-          transform: scale(1);
-        }
-        75% {
-          transform: scale(1);
-        }
-        85% {
-          transform: scale(1.3) rotate(45deg);
-        }
+
         100% {
-          transform: scale(0.8) rotate(-45deg);
+          transform: scale(1);
         }
       }
     }
